--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
-title: Kim
-description: Coming soon
+title: Kim's Portfolio
+description: Welcome to my portfolio! I'm building this to showcase my skills as a Business Intelligence Engineer.
